--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -29,10 +29,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install coverage
+        pip install coverage tblib
     - name: Run Tests
       run: |
-        coverage run --source=appointment manage.py test appointment.tests --verbosity=1
+        coverage run --source=appointment manage.py test appointment.tests --verbosity=1 --parallel
         coverage report
         coverage xml
     - name: Upload to Codecov
